Revert "Fix #3174, make selector view usable on high contrast themes"
This reverts commit c46d7ddd554f62da763d74c8ad6ab331ea3e2c29.

--- a/static/css/inline-selection.scss
+++ b/static/css/inline-selection.scss
@@ -21,7 +21,7 @@ $handle-mover-offset: -1px;
 $mover-size: $mover-outer + $mover-inner;
 $overlay-z-index: 9999999999;
 
-$modal-color: rgb(0, 0, 0);
+$modal-color: rgba(0, 0, 0, 0.7);
 $very-light-grey: #ededed;
 
 
@@ -45,8 +45,7 @@ $very-light-grey: #ededed;
 
 .hover-highlight {
   animation: fade-in 125ms forwards $bezier;
-  background: rgb(255, 255, 255);
-  opacity: 0.2;
+  background: rgba(255, 255, 255, 0.2);
   border-radius: 1px;
   pointer-events: none;
   position: absolute;
@@ -178,7 +177,6 @@ $very-light-grey: #ededed;
 
 .bghighlight {
   background-color: $modal-color;
-  opacity: 0.7;
   position: absolute;
   z-index: $overlay-z-index;
 }
@@ -186,7 +184,6 @@ $very-light-grey: #ededed;
 .preview-overlay {
   align-items: center;
   background-color: $modal-color;
-  opacity: 0.7;
   display: flex;
   height: 100%;
   justify-content: center;
@@ -197,10 +194,6 @@ $very-light-grey: #ededed;
   top: 0;
   width: 100%;
   z-index: $overlay-z-index;
-
-  body#preview-frame & {
-    opacity: 1;
-  }
 }
 
 .highlight {
@@ -407,7 +400,6 @@ $very-light-grey: #ededed;
   text-align: center;
   padding-top: 20px;
   width: 400px;
-  opacity: 1.0;
 }
 
 #imageCroppedWarning {
